too much padding - fixed

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 header {text-align: center;
 background-color: tan;
 word-spacing: 20%;
-font-size: 50px;
-padding: 20px;}
+font-size: 30px;
+padding: 10px;}
 
 section {float: right;}
 
@@ -11,5 +11,5 @@ p {text-align: left;}
 footer {text-align: center;
     background-color: tan;
     word-spacing: 20%;
-    font-size: 50px;
-    padding: 20px;}
+    font-size: 30px;
+    padding: 10px;}
